fix css broken on safari

--- a/pug/css/search-form.styl
+++ b/pug/css/search-form.styl
@@ -6,7 +6,9 @@
   display flex
   flex-grow 1
   justify-content center
+  align-items center
   padding 5px 10px
+  height 2em
   .keyword
     flex-grow 5
   .label
